2004-01-26  Christopher Faylor  <cgf@redhat.com>

	* cygtls.cc (_threadinfo::init_thread): Add more local reent stdio
	initialization.
	* dcrt0.cc (initial_env): Can it really be true that XP doesn't allow
	attaching a debugger during DLL attach?  Add temporary workaround.
	(dll_crt0_0): Ensure that _impure_ptr stdio is initialized before any
	threads.
	(dll_crt0_1): Move _impure_ptr initialization to dll_crt0_0.
	* exceptions.cc (try_to_debug): Reinstate old method for looping while
	debugging.
	* syscalls.cc (_cygwin_istext_for_stdio): Regularize debugging output.
	Remove hopefully extraneous check.
	(setmode_helper): Add debugging output for improbable case.  Use
	"binary" rather "raw" for consistency.

2004-01-25  Christopher Faylor  <cgf@redhat.com>

	* fhandler.cc (fhandler_base::fhaccess): Avoid always setting errno to
	EACCESS when return value is < 0.  Rely on errno being set properly.

2004-01-25  Christopher Faylor  <cgf@redhat.com>

	* sigproc.cc (proc_subproc): Don't protect *child's* handle.

2004-01-24  Christopher Faylor  <cgf@redhat.com>

	* fhandler.h (fhandler_base::fhaccess): Return int for compatibility
	with access.
	* fhandler.cc (fhandler_base::fhaccess): Return int.  Use consistent
	variable name for exit value.  Exit at bottom, printing debugging
	information, like other cygwin functions.

2004-01-23  Christopher Faylor  <cgf@redhat.com>

	* exceptions.cc (sig_handle): Remove extraneous vforkism.

2004-01-23  Christopher Faylor  <cgf@redhat.com>

	* cygheap.cc (init_cygheap::close_ctty): Protect YA vforkism.
	* fhandler.h (fhandler_base::has_acls): Make pass through for path_conv
	method.
	(fhandler_base::isremote): Ditto.
	(fhandler_base::is_fs_special): Ditto.
	(fhandler_base::has_attribute): Ditto.  Define new function.
	(fhandler_base::fhaccess): Declare new function based on access_worker.
	(fhandler_base::set_has_acls): Eliminate obsolete function.
	(fhandler_base::set_isremote): Ditto.